fix navbar dropdown menu blocked by video list div(z-index problem)

--- a/common/styles/video.scss
+++ b/common/styles/video.scss
@@ -58,9 +58,6 @@
 		}
 	}
 }
-* {
-	z-index: 2;
-}
 
 @media(min-width:767px) {
 	.video-item {
